Work in progress - added graph visibility to one partial

--- a/client/one/partials/main.html
+++ b/client/one/partials/main.html
@@ -62,7 +62,7 @@
                 show-publisher-selected="showPublisherSelected">
             </zem-filter>
             <div class="btn btn-default infobox-button pull-right" ng-show="hasPermission('zemauth.can_see_infobox') && infoboxEnabled" ng-click="toggleInfobox()">I</div>
-            <div class="btn btn-default graph-button pull-right" ng-click="toggleChart()"><img class="graph-button-image" ng-src="{{ config.static_url }}/one/img/chart.svg"></div>
+            <div class="btn btn-default graph-button pull-right" ng-click="toggleGraph()"><img class="graph-button-image" ng-src="{{ config.static_url }}/one/img/chart.svg"></div>
             <div class="btn btn-default navigation-button pull-right" ng-show="true" ng-click="toggleNavigationPane()">N</div>
             <div ui-view></div>
             
