Added navigation pane collapse

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -1557,7 +1557,6 @@ div[datepicker] {
     }
 
     .content {
-        margin-left: 210px;
         padding-right: 15px;
 
         #filter {
@@ -1745,6 +1744,14 @@ div[datepicker] {
             margin-left: 5px;
         }
     }
+}
+
+.content-short {
+	margin-left: 210px;
+}
+
+.content-full {
+	margin-left: 15px;
 }
 
 .page {
