--- a/client/one/partials/account_campaigns.html
+++ b/client/one/partials/account_campaigns.html
@@ -1,5 +1,5 @@
 <div class="page page-account-campaigns">
-    <div class="section" ng-class="{'chart-hidden': chartHidden}">
+    <div class="section" ng-class="{'graph-hidden': !graphVisible, 'chart-hidden': chartHidden}">
         <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedCampaignRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
     </div>
     <div class="section table-ad-group-ads">
