Update retargeting dropdown on navigation load

--- a/client/one/partials/zem_retargeting.html
+++ b/client/one/partials/zem_retargeting.html
@@ -7,7 +7,7 @@
      </div>
 </div>
 
-<ui-select theme="select2" ng-model="selected.adgroup" on-select="addAdgroup($item)">
+<ui-select theme="select2" ng-if="availableAdgroups().length" ng-model="selected.adgroup" on-select="addAdgroup($item)">
     <ui-select-match placeholder="Add New Ad Group">{{$item.name}}</ui-select-match>
     <ui-select-choices 
             group-by="groupByCampaign" 
