--- a/client/one/partials/account_campaigns.html
+++ b/client/one/partials/account_campaigns.html
@@ -5,7 +5,7 @@
                 <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
             </div>
             <div ng-if="hasPermission('zemauth.can_see_infobox')" ng-class="{'infobox-container-full': infoboxVisible, 'infobox-container-short': !infoboxVisible}">
-                <zem-infobox header="infoboxHeader" settings="infoboxSettings" link-to="'main.adGroups.settings'" state-id="$state.params.id"></zem-infobox>
+                <zem-infobox header="infoboxHeader" settings="infoboxSettings" link-to="'main.accounts.settings'" state-id="$state.params.id"></zem-infobox>
             </div>
         </div>
     </div>
