--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -9,7 +9,7 @@
         </div>
         
         <div class="pull-right">
-            <a class="btn btn-default " ng-click="tabClick($event)" zem-in-link="{{ linkTo }}({ id: {{ stateId }} })">
+            <a class="btn btn-default" ng-if="stateId !== undefined" ng-click="tabClick($event)" zem-in-link="{{ linkTo }}({ id: {{ stateId }} })">
                 <zem-internal-feature ng-if="tab.internal" popover-placement="bottom"></zem-internal-feature>
                 Edit
             </a>
