--- a/client/one/partials/ad_group_settings.html
+++ b/client/one/partials/ad_group_settings.html
@@ -206,7 +206,7 @@
                 <div class="col-xs-2">
                     <div class="input-group">
                         <span class="input-group-addon">$</span>
-                        <input id="autopilot-budget" type="text" class="form-control" ng-model="settings.autopilotBudget" zem-currency-input>
+                        <input id="autopilot-budget" type="text" class="form-control" ng-model="settings.autopilotBudget" fraction-size="0" zem-currency-input>
                     </div>
                 </div>
                 <label ng-repeat="error in errors.autopilotBudget" class="control-label error" for="autopilot-budget">{{ error }}</label>
