--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -702,26 +702,31 @@ div[datepicker] {
     margin-right: 5px;
     width: 34px;
     height: 34px;
+    line-height: 34px;
+	padding: 0px 0px;
 }
 
 .navigation-button {
     margin-right: 5px;
     width: 34px;
     height: 34px;
+    line-height: 34px;
+    padding: 0px 0px;
 }
 
 .graph-button {
     margin-right: 5px;
     width: 34px;
     height: 34px;
-    padding: 0px;
-    text-align: center;
-    vertical-align: middle;
+    padding: 0px 0px;
+    line-height: 34px;
 }
 
 .graph-button-image {
-    width: 28px;
-    height: 28px;
+    width: 30px;
+    height: 18px;
+    vertical-align: middle;
+    padding-bottom: 4px;
 }
 
 .infobox-background {
