--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -15,6 +15,7 @@
 
 @infobox-black: #414141;
 @infobox-gray: #aaaaaa;
+@white: #fff;
 
 @keyframes show-updated {
     0% { background-color: @updated-color; }
@@ -712,6 +713,8 @@ div[datepicker] {
     height: 34px;
     line-height: 34px;
     padding: 0px 0px;
+    border: 0px;
+	box-shadow: none;
 }
 
 .graph-button {
@@ -1313,15 +1316,13 @@ div[datepicker] {
 
         .content {
             float: right;
-            position: relative;
-            width: 170px;
+            max-width: 260px;
+            display: inline-block;
 
             .contact-content {
-                position: absolute;
+            	display: inline-block;
                 height: 50px;
                 line-height: 50px;
-                top: 5px;
-                left: 0;
                 text-align: right;
             }
 
@@ -1335,19 +1336,46 @@ div[datepicker] {
             }
 
             .profile {
-                position: absolute;
-                top: 4px;
-                right: 0;
+            	display: inline-block;
             }
 
-            .glyphicon {
-                border-left: 1px solid #2a89a1;
-                padding: 8px 1px 8px 17px;
-                margin-left: 20px;
-                display: inline-block;
-                color: white;
-                font-size: 19px;
-            }
+			.dropdown-toggle {
+				display: inline-block;
+				height: 28px;
+				line-height: 22px;
+				vertical-align: middle;
+				
+				.glyphicon {
+					display: inline-block;
+					color: @white;
+					font-size: 19px;
+					line-height: 19px;
+					vertical-align: middle;
+				}
+			}
+
+			.separator {
+				display: inline-block;
+				border-left: 1px solid #2a89a1;
+				padding: 8px 1px 8px 10px;
+				margin-left: 14px;
+				font-size: 19px;
+				line-height: 19px;
+			}
+			
+			.navbar-collapse-container {
+				display: inline-block;
+
+				.btn {
+					background: @default-color;
+				}
+
+				.glyphicon {
+					color: @white;
+					background: @default-color;
+					line-height: 19px;
+				}
+			}
         }
     }
 }
