Reduced separator margin

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -708,6 +708,11 @@ div[datepicker] {
     padding: 8px;
 
     color: @infobox-black;
+
+    hr {
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
 }
 
 .infobox-active-circle-icon-gray {
