--- a/client/one/partials/all_accounts_accounts.html
+++ b/client/one/partials/all_accounts_accounts.html
@@ -1,8 +1,14 @@
 <div class="page page-all-accounts-accounts">
-    <div class="section" ng-class="{'chart-hidden': chartHidden}">
-        <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-hide-legend="true" local-storage-prefix="localStoragePrefix"></zem-chart>
+    <div class="section">
+        <div class="graph-infobox-parent">
+            <div ng-class="{'graph-container-short': infoboxVisible && hasPermission('zemauth.can_see_infobox'), 'graph-infobox-parent': !hasPermission('zemauth.can_see_inbofox')}">
+                <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
+            </div>
+            <div ng-if="hasPermission('zemauth.can_see_infobox')" ng-class="{'infobox-container-full': infoboxVisible, 'infobox-container-short': !infoboxVisible}">
+                <zem-infobox header="infoboxHeader" settings="infoboxSettings" link-to="infoboxLinkTo" state-id="$state.params.id"></zem-infobox>
+            </div>
+        </div>
     </div>
-
     <div class="section table-ad-group-sources">
         <div class="button-bar">
 
