--- a/client/one/partials/header.html
+++ b/client/one/partials/header.html
@@ -22,7 +22,7 @@
             <a href="#" class="dropdown-toggle" dropdown-toggle>
                 <i class="glyphicon glyphicon-user"></i>
             </a>
-            <ul class="dropdown-menu" dropdown-menu>
+            <ul class="dropdown-menu dropdown-menu-right" dropdown-menu>
                 <li class="dropdown-header">{{ user.email }}</li>
                 <li ng-if="hasPermission('zemauth.switch_to_demo_mode')"><zem-internal-feature ng-if="isPermissionInternal('zemauth.switch_to_demo_mode')" popover-placement="bottom"></zem-internal-feature><a ng-href="/demo_mode">Demo mode</a></li>
                 <li><a ng-href="/signout">Sign out</a></li>
