CR: Removed unneeded code

--- a/client/one/partials/header.html
+++ b/client/one/partials/header.html
@@ -14,7 +14,7 @@
 <div class="profile-container">
     <div class="content">
         <div class="navbar-collapse-container">
-            <div class="btn btn-link navigation-button" ng-show="true" ng-click="toggleNavigationPane()">
+            <div class="btn btn-link navigation-button" ng-click="toggleNavigationPane()">
                 <i class="glyphicon glyphicon-menu-hamburger"></i>
             </div>
         </div>
