--- a/client/one/partials/campaign_settings.html
+++ b/client/one/partials/campaign_settings.html
@@ -29,6 +29,26 @@
             <label ng-repeat="error in errors.campaignGoal" class="control-label error" for="goal-select">{{ error }}</label>
         </div>
 
+        <div ng-if="hasPermission('zemauth.can_see_campaign_goals')">
+            <div class="form-group section table-campaign-goals">
+                <div class="row">
+                    <label class="col-xs-2 control-label">
+                        <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_see_campaign_goals')" popover-placement="right"></zem-internal-feature>
+                        Campaign goals:
+                    </label>
+                    <span class="col-xs-4">
+                        <span class="pull-right primary-goal-label">Primary goal</span>
+                    </span>
+                </div>
+
+                <div class="row">
+                    <div class="col-xs-6">
+                        <zem-campaign-goals></zem-campaign-goals>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div ng-if="hasPermission('zemauth.settings_defaults_on_campaign_level')" class="form-vertical">
             <div class="form-group" ng-class="{'has-error': !!errors.targetDevices}">
                 <label class="col-xs-3 control-label">
@@ -81,7 +101,6 @@
         zem-has-permission="hasPermission"
         zem-is-permission-internal="isPermissionInternal"
         zem-campaign="campaign"
-        zem-account="account"
-    >
+        zem-account="account">
     </zem-conversion-goals>
 </div>
