--- a/client/one/partials/edit_campaign_goal_modal.html
+++ b/client/one/partials/edit_campaign_goal_modal.html
@@ -1,7 +1,7 @@
 <div class="modal-body">
     <form id="edit-campaign-goal-form" ng-submit="save()" class="modal-form campaign-goal-form form-horizontal">
         <div class="title" ng-if="!!newCampaignGoal">Add a New Campaign Goal</div>
-        <div class="title" ng-if="!newCampaignGoal">Edit a New Campaign Goal</div>
+        <div class="title" ng-if="!newCampaignGoal">Edit a Campaign Goal</div>
 
         <div class="form-part">
             <div class="form-group">
