--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -818,6 +818,10 @@ div[datepicker] {
     border: 1px solid @infobox-gray;
 }
 
+.infobox-setting-section-start {
+	padding-top: 10px
+}
+
 .chart-hidden {
     display: none;
 }
