--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -17,7 +17,8 @@
     </div>
  
     <hr>
-    <div ng-repeat="setting in settings">
+    <div ng-repeat="setting in settings" 
+         ng-class="[{'infobox-setting-section-start': setting.section_start}, {'infobox-setting-section-end': setting.section_end}]">
         <hr ng-if="setting.type === 'hr'"/>
         <zem-infobox-setting 
             ng-if="setting.type == 'setting'"
