--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -1,10 +1,10 @@
 <div class="infobox infobox-background">
-    <div class="infobox-header clearfix">
+    <div class="infobox-header clearfix" ng-class="{'infobox-header-wo-subtitle': header.subtitle === undefined}">
         <div class="pull-left">
             <div ng-if="header.active !== undefined" ng-class="[{'active-circle-icon': header.active, 'infobox-active-circle-icon-gray': !header.active}, 'infobox-title', 'infobox-status']"></div>
             <div style="display:inline-block;">
                 <div class="infobox-title">{{header.title}}</div>
-                <div class="infobox-subtitle">{{header.subtitle}}</div>
+                <div ng-if="header.subtitle !== undefined" class="infobox-subtitle">{{header.subtitle}}</div>
             </div>
         </div>
         
