Added specific label width per level infobox

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -706,6 +706,34 @@ div[datepicker] {
     background: #f6f6f6;
 }
 
+.infobox-adgroup {
+	.infobox-setting-label {
+		width: 120px;
+		max-width: 120px;
+	}
+}
+
+.infobox-account {
+	.infobox-setting-label {
+		width: 120px;
+		max-width: 120px;
+	}
+}
+
+.infobox-campaign {
+	.infobox-setting-label {
+		width: 125px;
+		max-width: 125px;
+	}
+}
+
+.infobox-all-accounts {
+	.infobox-setting-label {
+		width: 185px;
+		max-width: 185px;
+	}
+}
+
 .infobox {
     padding: 10px;
 
