--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -1,4 +1,4 @@
-<div class="infobox infobox-background">
+<div class="infobox infobox-background infobox-{{header.level}}">
     <div class="infobox-header clearfix" ng-class="{'infobox-header-wo-subtitle': header.subtitle === undefined}">
         <div class="pull-left">
             <div ng-if="header.active !== undefined" ng-class="[{'active-circle-icon': header.active, 'infobox-active-circle-icon-gray': !header.active}, 'infobox-title', 'infobox-status']"></div>
