Made lines taller

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -813,7 +813,7 @@ div[datepicker] {
 	display: inline-block;
 	width: 68%;
 	vertical-align: top;
-    line-height: 14px;
+    line-height: 16px;
 }
 
 .infobox-setting-label {
@@ -821,7 +821,7 @@ div[datepicker] {
     overflow: hidden;
     display: inline-block;
     color: @infobox-gray;
-    line-height: 14px;
+    line-height: 16px;
     vertical-align: top;
 }
 
@@ -863,6 +863,7 @@ div[datepicker] {
     background: white;
     padding: 10px;
     border: 1px solid @infobox-gray;
+    margin: 5px 0px
 }
 
 .infobox-setting-section-start {
