Fix for badly displayed tracking code details

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -861,7 +861,7 @@ div[datepicker] {
 }
 
 .infobox-setting-info-dropped {
-    display: block;
+    display: inline-block;
 }
 
 .infobox-setting-info-dropped-content {
