CR: Further improved the html's

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -820,6 +820,10 @@ div[datepicker] {
     font-size: 13px;
 }
 
+.infobox-setting {
+	overflow: hidden;
+}
+
 .infobox-setting-value-container {
     display: inline-block;
     width: 68%;
