--- a/client/one/partials/zem_infobox_setting.html
+++ b/client/one/partials/zem_infobox_setting.html
@@ -1,4 +1,4 @@
-<div style="overflow:hidden">
+<div class="infobox-setting">
     <div class="infobox-setting-label">{{label}}</div>
     
     <div class="infobox-setting-value-container">
@@ -30,6 +30,4 @@
             </div>
         </div>
     </div>
-
-    <div class="clearfix"></div>
 </div>
