CR: Removed backend word break

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -894,6 +894,7 @@ div[datepicker] {
 
 .infobox-setting-info-dropped {
     display: inline-block;
+    word-break: break-all;
 }
 
 .infobox-setting-info-dropped-content {
