--- a/client/one/partials/account_campaigns.html
+++ b/client/one/partials/account_campaigns.html
@@ -1,14 +1,5 @@
 <div class="page page-account-campaigns">
-    <div class="section">
-        <div class="graph-infobox-parent">
-            <div ng-class="{'graph-container-short': infoboxVisible && hasPermission('zemauth.can_see_infobox'), 'graph-infobox-parent': !hasPermission('zemauth.can_see_inbofox')}">
-                <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
-            </div>
-            <div ng-if="hasPermission('zemauth.can_see_infobox')" ng-class="{'infobox-container-full': infoboxVisible, 'infobox-container-short': !infoboxVisible}">
-                <zem-infobox header="infoboxHeader" settings="infoboxSettings" link-to="'main.accounts.settings'" state-id="$state.params.id"></zem-infobox>
-            </div>
-        </div>
-    </div>
+    <div class="section" ng-include src="'/partials/graph_infobox.html'"></div>
     <div class="section table-ad-group-ads">
         <div class="button-bar">
             <div ng-if="hasPermission('zemauth.account_campaigns_add_campaign')" class="button-bar-item add-source-container">
