--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -813,10 +813,15 @@ div[datepicker] {
         border-top: 1px solid #dddddd;
         margin: 10px -10px;
     }
+
+	.active-circle-icon {
+		display: table-cell;
+	}
 }
 
 .infobox-active-circle-icon-gray {
     .state-icon-placeholder();
+    display: table-cell;
     background-image: url('img/active_circle_icon_gray.svg');
     height: 14px;
     line-height: 34px;
@@ -836,11 +841,34 @@ div[datepicker] {
 }
 
 .infobox-header {
-    display: block;
+    display: table;
+    table-layout: fixed;
     width: 100%;
-    white-space: nowrap;
-    overflow: visible;
     height: 34px;
+}
+
+.infobox-header-row {
+	display: table-row;
+}
+
+.infobox-header-cell {
+	display: table-cell;
+	width: 20px;
+}
+
+.infobox-header-title-cell {
+	display: table-cell;
+	vertical-align: middle;
+	text-align: left;
+	width: 100%;
+	word-wrap: break-word;
+}
+
+.infobox-header-button-cell {
+	display: table-cell;
+	text-align: right;
+	width: 50px;
+	vertical-align: middle;
 }
 
 .infobox-header-wo-subtitle {
@@ -874,16 +902,14 @@ div[datepicker] {
 }
 
 .infobox-setting-value-container {
-    display: inline-block;
-    width: 68%;
+    display: table-cell;
     vertical-align: top;
     line-height: 16px;
 }
 
 .infobox-setting-label {
-    width: 30%;
     overflow: hidden;
-    display: inline-block;
+    display: table-cell;
     color: @infobox-gray;
     line-height: 16px;
     vertical-align: top;
