--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -1,18 +1,18 @@
 <div class="infobox infobox-background infobox-{{header.level}}">
     <div class="infobox-header" ng-class="{'infobox-header-wo-subtitle': header.subtitle === undefined}">
-        <div class="pull-left">
-            <div ng-if="header.active !== undefined" ng-class="[{'active-circle-icon': header.active, 'infobox-active-circle-icon-gray': !header.active}, 'infobox-title', 'infobox-status']"></div>
-            <div style="display:inline-block;">
+        <div class="infobox-header-row">
+            <div class="infobox-header-cell" ng-if="header.active !== undefined" ng-class="[{'active-circle-icon': header.active, 'infobox-active-circle-icon-gray': !header.active}, 'infobox-title', 'infobox-status']"></div>
+            <div class="infobox-header-title-cell">
                 <div class="infobox-title">{{header.title}}</div>
                 <div ng-if="header.subtitle !== undefined" class="infobox-subtitle">{{header.subtitle}}</div>
             </div>
-        </div>
         
-        <div class="pull-right">
-            <a class="btn btn-default" ng-if="stateId !== undefined" ng-click="tabClick($event)" zem-in-link="{{ linkTo }}({ id: {{ stateId }} })">
-                <zem-internal-feature ng-if="tab.internal" popover-placement="bottom"></zem-internal-feature>
-                Edit
-            </a>
+            <div class="infobox-header-button-cell">
+                <a class="btn btn-default" ng-if="stateId !== undefined" ng-click="tabClick($event)" zem-in-link="{{ linkTo }}({ id: {{ stateId }} })">
+                    <zem-internal-feature ng-if="tab.internal" popover-placement="bottom"></zem-internal-feature>
+                    Edit
+                </a>
+            </div>
         </div>
     </div>
  
