--- a/client/one/partials/graph_infobox.html
+++ b/client/one/partials/graph_infobox.html
@@ -4,7 +4,7 @@
             <zem-chart zem-data="chartData" zem-metric1="chartMetric1" zem-metric2="chartMetric2" zem-metric-options="chartMetricOptions" zem-min-date="dateRange.startDate" zem-max-date="dateRange.endDate" zem-on-remove="selectedSourceRemoved(id)" local-storage-prefix="localStoragePrefix"></zem-chart>
         </div>
         <div ng-if="infoboxVisible && hasPermission('zemauth.can_see_infobox')" class="infobox-container">
-            <zem-infobox class="infobox-wrapper" header="infoboxHeader" settings="infoboxSettings" link-to="'main.adGroups.settings'" state-id="$state.params.id"></zem-infobox>
+            <zem-infobox class="infobox-wrapper" header="infoboxHeader" basic-settings="infoboxBasicSettings" performance-settings="infoboxPerformanceSettings" link-to="'main.adGroups.settings'" state-id="$state.params.id"></zem-infobox>
         </div>
     </div>
 </div>
