[minor] Update Maximum CPC tooltip

--- a/client/one/partials/ad_group_settings.html
+++ b/client/one/partials/ad_group_settings.html
@@ -72,7 +72,7 @@
             <label for="cpc-input" class="col-xs-2 control-label">
                 <zem-internal-feature ng-if="isPermissionInternal('zemauth.can_set_ad_group_max_cpc')" popover-placement="right"></zem-internal-feature>
                 Maximum CPC
-                <zem-help-popover content="Maximum CPC in this ad group." placement="top"></zem-help-popover>
+                <zem-help-popover content="Maximum allowed CPC in this ad group." placement="top"></zem-help-popover>
             </label>
             <div class="col-xs-2">
                 <div class="input-group">
