Split settings into basic and performance for all infobox levels

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -794,13 +794,14 @@ div[datepicker] {
 
 .infobox-all-accounts {
     .infobox-setting-label {
-        width: 45%;
+        width: 185px;
         max-width: 185px;
     }
 
-    .infobox-setting-value-container {
-        width: 50%;
-    }
+    .infobox-body {
+		overflow: hidden;
+		height: 200px;
+	}
 }
 
 .infobox {
