Fixed paddings between setting items

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -914,8 +914,8 @@ div[datepicker] {
 
 .infobox-setting-value-container {
     display: table-cell;
-    vertical-align: top;
     line-height: 16px;
+	vertical-align: text-top;
 }
 
 .infobox-setting-label {
@@ -966,6 +966,10 @@ div[datepicker] {
     padding: 10px;
     border: 1px solid @infobox-gray;
     margin: 5px 0px
+}
+
+.infobox-setting-base {
+	padding-top: 5px;
 }
 
 .infobox-setting-section-start {
