Circle icon is now a character

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -819,17 +819,6 @@ div[datepicker] {
 	}
 }
 
-.infobox-active-circle-icon-gray {
-    .state-icon-placeholder();
-    display: table-cell;
-    background-image: url('img/active_circle_icon_gray.svg');
-    height: 14px;
-    line-height: 34px;
-    background-position: center center;
-    background-size: 43px auto;
-    width: 14px;
-}
-
 .infobox-status {
     text-align:right;
     display: inline-block;
@@ -892,6 +881,16 @@ div[datepicker] {
     font-size: 18px;
     font-weight: 600;
     line-height: 20px;
+}
+
+.infobox-active-icon {
+	color: #00cc18;
+	text-align: center;
+}
+
+.infobox-inactive-icon {
+	color: @infobox-black;
+	text-align: center;
 }
 
 .infobox-icon {
