--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -1,7 +1,7 @@
 <div class="infobox infobox-background infobox-{{header.level}}">
     <div class="infobox-header" ng-class="{'infobox-header-wo-subtitle': header.subtitle === undefined}">
         <div class="infobox-header-row">
-            <div class="infobox-header-cell" ng-if="header.active !== undefined" ng-class="[{'active-circle-icon': header.active, 'infobox-active-circle-icon-gray': !header.active}, 'infobox-title', 'infobox-status']"></div>
+            <div class="infobox-header-cell" ng-if="header.active !== undefined" ng-class="['infobox-title', {'infobox-active-icon': header.active, 'infobox-inactive-icon': !header.active}, 'infobox-status']">{{ '\u25CF' }}</div>
             <div class="infobox-header-title-cell">
                 <div class="infobox-title">{{header.title}}</div>
                 <div ng-if="header.subtitle !== undefined" class="infobox-subtitle">{{header.subtitle}}</div>
