Show more for locations

--- a/client/one/less/style.less
+++ b/client/one/less/style.less
@@ -862,6 +862,7 @@ div[datepicker] {
 	text-align: left;
 	width: 100%;
 	word-wrap: break-word;
+	padding-left: 5px;
 }
 
 .infobox-header-button-cell {
@@ -958,6 +959,7 @@ div[datepicker] {
 .infobox-setting-info-dropped {
     display: inline-block;
     word-break: break-all;
+    width: 100%;
 }
 
 .infobox-setting-info-dropped-content {
@@ -965,6 +967,7 @@ div[datepicker] {
     padding: 10px;
     border: 1px solid @infobox-gray;
     margin: 5px 0px
+    width: 100%;
 }
 
 .infobox-setting-base {
