--- a/client/one/partials/zem_infobox.html
+++ b/client/one/partials/zem_infobox.html
@@ -28,6 +28,7 @@
                 value-description="setting.description"
                 details-label="setting.detailsLabel"
                 details-content="setting.detailsContent"
+                warning="setting.warning"
                 icon="(setting.icon || '')"
                 tooltip-text="(setting.tooltip || undefined)">
             </zem-infobox-setting>
@@ -45,6 +46,7 @@
                 value-description="setting.description"
                 details-label="setting.detailsLabel"
                 details-content="setting.detailsContent"
+                warning="setting.warning"
                 icon="(setting.icon || '')"
                 tooltip-text="(setting.tooltip || undefined)">
             </zem-infobox-setting>
